k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: api-deployment
spec:
   replicas: 3
   selector:
      matchLabels:
         component: api
   template:
      metadata:
         labels:
            component: api
      spec:
         containers:
            - name: api
              image: cspalevic/multi-api
              ports:
               - containerPort: 5000
